--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ - Buraleh & Co</title>
+    <title>FAQ - Premium Dental Marketing</title>
     <style>
         /* Global Reset */
         *,
@@ -142,7 +142,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">Buraleh & Co</a>
+                <a href="index.html">Premium Dental Marketing</a>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -156,27 +156,27 @@
     <section class="section">
         <h1>Frequently Asked Questions (FAQ)</h1>
         
-        <h2>Q1: What services does Buraleh & Co offer?</h2>
-        <p>A1: We specialize in premium boat marketing through advanced geolocation-based advertising and SEO strategies. Our services are designed to help boat sellers and dealerships connect with the right buyers faster and more effectively.</p>
+        <h2>Q1: What services does Premium Dental Marketing offer?</h2>
+        <p>A1: We specialize in premium dental marketing through advanced geolocation-based advertising and SEO strategies. Our services are designed to help dental practices in Canada connect with the right patients faster and more effectively.</p>
 
         <h2>Q2: How can I sign up for your services?</h2>
-        <p>A2: You can sign up by contacting us through our Contact form on the website or by emailing us directly at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>. Our team will guide you through the process and help you select the best marketing plan for your premium boat listings.</p>
+        <p>A2: You can sign up by contacting us through our Contact form on the website or by emailing us directly at <a href="mailto:PremiumDentalMarketing@gmail.com">PremiumDentalMarketing@gmail.com</a>. Our team will guide you through the process and help you select the best marketing plan for your dental practice.</p>
 
         <h2>Q3: What payment methods do you accept?</h2>
-        <p>A3: We accept payments via PayPal. Please send your payment to <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a> via PayPal to get started with our services.</p>
+        <p>A3: We accept payments via e-Transfer. Please send your payment to <a href="mailto:PremiumDentalMarketing@gmail.com">PremiumDentalMarketing@gmail.com</a> via e-Transfer to get started with our services.</p>
 
         <h2>Q4: How can I cancel my subscription?</h2>
-        <p>A4: To cancel your subscription or inquire about any changes to your services, please contact us at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>.</p>
+        <p>A4: To cancel your subscription or inquire about any changes to your services, please contact us at <a href="mailto:PremiumDentalMarketing@gmail.com">PremiumDentalMarketing@gmail.com</a>.</p>
 
         <h2>Q5: How does your geolocation-based marketing work?</h2>
-        <p>A5: Our geolocation-based marketing strategy uses advanced analytics to target potential boat buyers within specific geographic regions. This ensures your boat listings are shown to the right audience, increasing your chances of making a successful sale.</p>
+        <p>A5: Our geolocation-based marketing strategy uses advanced analytics to target potential patients within specific geographic regions in Canada. This ensures your dental practice is shown to the right audience, increasing your chances of attracting new patients.</p>
 
         <h2>Q6: How do I get in touch with customer support?</h2>
-        <p>A6: For any customer inquiries or support requests, please email us at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>. We’re here to assist you with any questions or concerns.</p>
+        <p>A6: For any customer inquiries or support requests, please email us at <a href="mailto:PremiumDentalMarketing@gmail.com">PremiumDentalMarketing@gmail.com</a>. We’re here to assist you with any questions or concerns.</p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Buraleh & Co. All Rights Reserved.</p>
+        <p>&copy; 2024 Premium Dental Marketing. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
