--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Buraleh & Co</title>
+    <title>Privacy Policy - Buraleh & Co | Premium Dental Marketing</title>
     <style>
         /* Global Reset */
         *,
@@ -144,7 +144,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">Buraleh & Co</a>
+                <a href="index.html">Buraleh & Co | Premium Dental Marketing</a>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -179,7 +179,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Buraleh & Co. All Rights Reserved.</p>
+        <p>&copy; 2024 Buraleh & Co | Premium Dental Marketing. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
