--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         header {
-            background: rgba(0, 0, 0, 0.5); /* Transparent dark background to make header readable */
+           color: var(--primary-color);
             padding: 15px 0;
             position: relative;
         }
