--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="pricing" class="section" style="background-image: url('https://wallpapers.com/images/hd/white-and-purple-oadrnmje32yps6in.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
+    <section id="pricing" class="section" style="background-image: url('https://www.dentalhygienenation.com/cdn/shop/files/1_2a71e065-5973-4f65-8116-914fe185e5cb.png?v=1696534847&width=2400'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
       <div class="pricing-plans">
             <div class="pricing-plan">
         <h1>Contact Us</h1>
