--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="section">
+    <section id="about" class="section" style="background-image: url('https://static.vecteezy.com/system/resources/previews/002/834/148/non_2x/light-purple-pink-template-with-sky-clouds-colorful-illustration-with-abstract-gradient-clouds-colorful-pattern-for-appdesign-vector.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
         <h1>Buraleh & Co</h1>
         <p>Revolutionizing the way dental practices connect with patients across Canada. As Canada’s leading dental marketing agency, we specialize in advanced geolocation and SEO strategies that help you grow your practice and attract more patients from your local community.</p>
     </section>
@@ -106,7 +106,7 @@
     </section>
 
     <!-- Geolocation Section -->
-    <section id="geolocation" class="section">
+    <section id="geolocation" class="section" style="background-image: url('https://static.vecteezy.com/system/resources/previews/002/834/148/non_2x/light-purple-pink-template-with-sky-clouds-colorful-illustration-with-abstract-gradient-clouds-colorful-pattern-for-appdesign-vector.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
         <h1>Targeted Patient Acquisition Across Canada</h1>
         <p>Our geolocation-driven SEO strategy effectively targets potential patients in your specific Canadian city or region. Whether you're based in Vancouver, Toronto, Montreal, or anywhere in between, our precision marketing connects your dental practice with local patients in need of dental services. Maximize your visibility, increase your patient base, and grow your practice.</p>
     </section>
@@ -156,7 +156,7 @@
     </section>
 
     <!-- Cities Carousel Section -->
-    <section id="section" class="geolocation" style="background-image: url('https://images2.alphacoders.com/134/thumb-1920-1343512.png'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
+    <section id="section" class="section" style="background-image: url('https://static.vecteezy.com/system/resources/previews/002/834/148/non_2x/light-purple-pink-template-with-sky-clouds-colorful-illustration-with-abstract-gradient-clouds-colorful-pattern-for-appdesign-vector.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
         <h2>Our Service Cities in Canada</h2>
         <div class="cities-carousel-container">
             <div class="cities-slider">
@@ -183,7 +183,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="pricing" class="section" style="background-image: url('https://www.dentalhygienenation.com/cdn/shop/files/1_2a71e065-5973-4f65-8116-914fe185e5cb.png?v=1696534847&width=2400'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
+    <section id="pricing" class="section" style="background-image: url('https://s3.mortarr.com/images/project_gallery_images/murals-your-way-dental-office-costal-landscape-wall-mural.jpeg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
       <div class="pricing-plans">
             <div class="pricing-plan">
         <h1>Contact Us</h1>
