--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Grow your dental practice faster with targeted marketing and SEO across Canada">
     <meta name="keywords" content="dental marketing, dental office SEO, patient acquisition, targeted marketing for dental clinics in Canada">
     <meta name="author" content="Buraleh & Co">
-    <title>Buraleh & Co | Premium Dental Marketing</title>
+    <title>Buraleh & Co | Premium Dental Marketing Agency</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
