--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ - Buraleh & Co | Premium Dental Marketing</title>
+    <title>FAQ - Buraleh & Co | Premium Dental Marketing Agency</title>
     <style>
         /* Global Reset */
         *,
@@ -142,7 +142,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">Buraleh & Co | Premium Dental Marketing</a>
+                <a href="index.html">Buraleh & Co | Premium Dental Marketing Agency</a>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -176,7 +176,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Buraleh & Co | Premium Dental Marketing. All Rights Reserved.</p>
+        <p>&copy; 2024 Buraleh & Co | Premium Dental Marketing Agency. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
