--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -144,7 +144,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">Buraleh & Co | Premium Dental Marketing</a>
+                <a href="index.html">Buraleh & Co | Premium Dental Marketing Agency</a>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -179,7 +179,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Buraleh & Co | Premium Dental Marketing. All Rights Reserved.</p>
+        <p>&copy; 2024 Buraleh & Co | Premium Dental Marketing Agency. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
