--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Conditions - Buraleh & Co | Premium Dental Marketing</title>
+    <title>Terms & Conditions - Buraleh & Co | Premium Dental Marketing Agency</title>
     <style>
         /* Global Reset */
         *,
@@ -144,7 +144,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">Buraleh & Co | Premium Dental Marketing</a>
+                <a href="index.html">Buraleh & Co | Premium Dental Marketing Agency</a>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -166,10 +166,10 @@
         <p>All payments for services must be made via e-Transfer. Please send your payment to <a href="mailto:buralehandco@gmail.com">buralehandco@gmail.com</a> via e-Transfer. By subscribing to any of our services, you agree to pay the fees as outlined on our website.</p>
 
         <h2>3. Content Ownership</h2>
-        <p>All content on our website, including logos, images, and text, is owned by Buraleh & Co | Premium Dental Marketing unless otherwise stated. You may not copy, reproduce, or distribute this content without our written permission.</p>
+        <p>All content on our website, including logos, images, and text, is owned by Buraleh & Co | Premium Dental Marketing Agency unless otherwise stated. You may not copy, reproduce, or distribute this content without our written permission.</p>
 
         <h2>4. Liability</h2>
-        <p>While we strive to provide accurate and reliable services, Buraleh & Co | Premium Dental Marketing is not responsible for any errors or omissions, or for any damages arising from the use of our website or services.</p>
+        <p>While we strive to provide accurate and reliable services, Buraleh & Co | Premium Dental Marketing Agency is not responsible for any errors or omissions, or for any damages arising from the use of our website or services.</p>
 
         <h2>5. Termination</h2>
         <p>We reserve the right to terminate or suspend your access to our services at any time, without notice, for violating these terms.</p>
@@ -181,7 +181,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Buraleh & Co | Premium Dental Marketing. All Rights Reserved.</p>
+        <p>&copy; 2024 Buraleh & Co | Premium Dental Marketing Agency. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
