--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
         /* Adding the background image to the body */
         body {
-            background-image: url('https://www.dentalhygienenation.com/cdn/shop/files/1_2a71e065-5973-4f65-8116-914fe185e5cb.png?v=1696534847&width=2400');
+            background-image: url('https://wallpapers.com/images/hd/minimalist-neon-lights-4k-purple-40k82xyg4n3au9cn.jpg');
             background-size: cover; /* Ensures the image covers the entire background */
             background-position: center; /* Centers the image */
             background-attachment: fixed; /* Keeps the background fixed while scrolling */
@@ -90,7 +90,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="section" style="background-image: url('https://static.vecteezy.com/system/resources/previews/002/834/148/non_2x/light-purple-pink-template-with-sky-clouds-colorful-illustration-with-abstract-gradient-clouds-colorful-pattern-for-appdesign-vector.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
+    <section id="pricing" class="section" style="background-image: url('https://static.vecteezy.com/system/resources/previews/002/834/148/non_2x/light-purple-pink-template-with-sky-clouds-colorful-illustration-with-abstract-gradient-clouds-colorful-pattern-for-appdesign-vector.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
         <h1>Buraleh & Co</h1>
         <p>Revolutionizing the way dental practices connect with patients across Canada. As Canada’s leading dental marketing agency, we specialize in advanced geolocation and SEO strategies that help you grow your practice and attract more patients from your local community.</p>
     </section>
@@ -106,7 +106,7 @@
     </section>
 
     <!-- Geolocation Section -->
-    <section id="geolocation" class="section" style="background-image: url('https://static.vecteezy.com/system/resources/previews/002/834/148/non_2x/light-purple-pink-template-with-sky-clouds-colorful-illustration-with-abstract-gradient-clouds-colorful-pattern-for-appdesign-vector.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
+    <section id="pricing" class="section" style="background-image: url('https://static.vecteezy.com/system/resources/previews/002/834/148/non_2x/light-purple-pink-template-with-sky-clouds-colorful-illustration-with-abstract-gradient-clouds-colorful-pattern-for-appdesign-vector.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
         <h1>Targeted Patient Acquisition Across Canada</h1>
         <p>Our geolocation-driven SEO strategy effectively targets potential patients in your specific Canadian city or region. Whether you're based in Vancouver, Toronto, Montreal, or anywhere in between, our precision marketing connects your dental practice with local patients in need of dental services. Maximize your visibility, increase your patient base, and grow your practice.</p>
     </section>
